benefits/static/css/styles.css
/* ... */
.container.content h1 ~ p:nth-last-of-type(1) {
  margin-bottom: 2rem;
}

.container.content .btn-lg,
.eligibility-start .btn-link {
  font-weight: 500;
  margin-bottom: 1rem;
  padding: 0.8125rem;
  /* btn-lg height is 60px */
  width: 100%;
}

.container.content .btn-link,
.eligibility-start .btn-link {
  text-decoration: underline;
}

/* media queries */

@media (max-width: 320px) {
  #login {
    padding: 1rem 1.25rem;
  }

  .eligibility-start .main-container .buttons {
    padding: 0 3rem;
  }
}

@media (max-width: 767px) {
  /* xs and sm */
  .global-footer {
    padding: 0;
  }

  .global-footer .container {
    padding: 0;
    max-width: 100%;
  }

  .global-footer ul.footer-links {
    margin: 0 !important;
    padding: 0;
  }

  .global-footer ul.footer-links li {
    width: 100%;
    line-height: 50px;
    margin-left: 0;
  }

  .global-footer ul.footer-links li:not(:last-child) {
    border-bottom: 2px solid white;
  }

  .global-footer ul.footer-links li a {
    padding-left: 30px;
    margin: 0;
  }

  .radio-container {
    display: block;
    margin-left: 0%;
  }

  .radio-label {
    display: inline;
    margin-left: 5px;
  }

  .container.content {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (max-width: 992px) {
  .container.content .btn-lg {
    padding: 1.1875rem 0.813rem;
  }

  /* Mobile With Image */

  .with-image main .main-row .col-lg-6.image {
    background-position: center bottom;
    height: 240px;
    background-size: cover;
    margin-bottom: 60px;
  }

  .signout-row .container .signout-link {
    font-size: 16px;
    color: #2b6597;
    background: none;
    padding: 10px 30px;
    border-radius: 3px;
    border: 2px solid #2b6597;
    margin-top: 20px;
  }

  .signout-row .container .signout-link:hover {
    background: none;
  }

  .signout-row {
    top: 308px;
  }

  /* Eligibility Start */

  .eligibility-start h1.headline {
    text-align: left;
    font-size: 24px;
    line-height: 36px;
    margin-top: 24px;
    margin-bottom: 16px;
  }

  .eligibility-start .main-content {
    padding-top: 0;
  }

  .eligibility-start .period {
    display: none;
  }

  .media-list {
    gap: 40px;
  }

  .media-list .media .media-line .icon {
    width: 90px;
    height: 90px;
  }

  .media-list .media {
    flex-direction: row;
  }

  .media-list .media .media-line {
    margin: 0 20px 0 0;
  }

  .media-list .media .media-body {
    padding: 0;
  }

  .media-list .media .media-body--heading {
    height: 90px;
  }

  .media-list .media .media-body--details {
    padding-bottom: 25px;
    margin-left: -100px;
    font-size: 20px;
    line-height: 30px;
  }

  .media-list .media .media-body--links {
    margin-left: -100px;
    float: right;
  }

  .eligibility-start .main-content .container strong a {
    display: block;
    line-height: 15px;
    letter-spacing: 0.05em;
    padding: 6px;
    text-align: left;
    width: 100%;
    margin: 18px 0;
    font-size: 18px;
    text-decoration: none !important;
    letter-spacing: 0.2px;
    border: 2px solid #046b99;
    border-radius: 0.3rem;
    font-weight: 500;
    width: 212px;
    line-height: 22.5px;
  }

  .media-list .media .media-body .media-body--links .btn-lg {
    letter-spacing: 0.02em;
    padding: 6px;
    text-align: left;
    width: 100%;
    margin: 0;
    font-size: 18px;
    text-decoration: none;
    letter-spacing: 0.2px;
    border: 2px solid #046b99;
    margin-bottom: 24px;
    font-weight: 500;
    width: 212px;
    line-height: 22.5px;
    border-radius: 3px;
    display: block;
  }

  .media-title {
    text-align: left !important;
    margin-top: 42px;
    margin-bottom: 46px;
  }

  .eligibility-start .media-list {
    margin-bottom: 60px;
  }

  #login .fallback-text {
    padding-top: 14px;
    margin: 8px auto 0 auto;
    display: block;
  }

  #login {
    line-height: unset;
    padding: 12px 67.5px;
    font-size: 20px;
    margin: 30px auto;
    display: inline-block;
  }

  /* Override for only the Agency Index page */
  .agency-index .container.content h1 ~ p:nth-last-of-type(1) {
    margin-bottom: 2rem;
  }

  .logged-out.enrollment-success .container.content {
    padding-top: 10vh;
  }
}

@media (min-width: 992px) {
  /* undoing the sticky footer for pages with header image
       the backup plan is to color the body the same as the footer
       to avoid the floating footer look
    */
  .with-image main {
    flex-shrink: unset;
  }

  footer {
    margin-top: unset;
    padding-top: 0.138rem;
    padding-bottom: 0.138rem;
  }

  .container.content {
    padding-left: 3.5rem;
    padding-right: 3.5rem;
    padding-top: 2rem;
    padding-bottom: 2rem;
    margin: 0;
  }

  .container.content input[type="submit"],
  .container.content .btn {
    width: fit-content;
    min-width: 250px;
    display: block;
    margin-left: auto;
    margin-right: auto;
  }

  /* Override for only the Agency Index page */
  .agency-index .container.content h1 ~ p:nth-last-of-type(1) {
    margin-bottom: 4rem;
  }
}

@media (max-width: 1081px) {
  .media-list {
    margin-top: 50px;
  }
}

@media (min-width: 1200px) {
  /* xl+ */
  .container.content {
    padding-left: 5rem;
    padding-right: 5rem;
    padding-top: 4.5rem;
    padding-bottom: 2rem;
    margin: 0;
  }

  /* Override for only the Agency Index page */
  .agency-index .container.content h1 ~ p:nth-last-of-type(1) {
    margin-bottom: 5rem;
  }
}

